Converted to sparse matrix

--- a/TVTropes.ipynb
+++ b/TVTropes.ipynb
@@ -63,8 +63,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The form of 'data' is a dictionary from movie names to the names of their associated tropes. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -74,6 +81,7 @@
       "5925\n",
       "['ABeautifulMind', 'ABetterTomorrow', 'ABirdersGuideToEverything', 'ABittersweetLife', 'ABoyAndHisDog', 'ABridgeTooFar', 'ABronxTale', 'ACaseOfSpringFever', 'AChristmasCarol2009', 'AChristmasStory']\n",
       "['Foreshadowing', 'RuleOfPerception', 'AwardBaitSong', 'SoundtrackDissonance', 'PragmaticAdaptation', 'OffScreenTeleportation', 'ForegoneConclusion', 'ImaginaryFriend', 'OscarBait', 'TheReveal', 'IvyLeagueForEveryone', 'TakeAThirdOption', 'Hallucinations', 'AbsentMindedProfessor', 'TheLoinsSleepTonight', 'HollywoodNerd', 'ShoutOut', 'DoYouWantToCopulate', 'BrokenAce', 'TheBigBoard', 'SheIsAllGrownUp', 'PoliticallyCorrectHistory', 'AllThereIsToKnowAboutTheCryingGame', 'NotThatKindOfDoctor', 'RedScare', 'BunnyEarsLawyer', 'UnreliableNarrator', 'RoomFullOfCrazy', 'HollywoodScience', 'AdultFear', 'ForgetsToEat', 'SmartPeoplePlayChess', 'MeaningfulEcho', 'GoodWithNumbers', 'MentalStory', 'AnswerCut', 'NoMedicationForMe', 'EEqualsMCHammer', 'WritersCannotDoMath', 'EurekaMoment', 'EveryoneLovesBlondes', 'MadMathematician', 'WindmillCrusader', 'DitzyGenius', 'ScienceRelatedMemeticDisorder', 'BadassBoast', 'SchizoTech', 'OohMeAccentsSlipping', 'DumbassHasAPoint']\n",
+      "\n",
       "DualTonfas\n",
       "18270\n"
      ]
@@ -83,8 +91,11 @@
     "print(len(data))\n",
     "print(list(data.keys())[0:10])\n",
     "print(data['ABeautifulMind'])\n",
-    "all_tropes = ft.reduce(lambda x,y:x.union(set(y)),data.values(),set())\n",
-    "print(list(all_tropes)[0])\n",
+    "all_tropes = list(ft.reduce(lambda x,y: x.union(set(y)), data.values(), set()))\n",
+    "all_movies = list(data.keys())\n",
+    "\n",
+    "print()\n",
+    "print(all_tropes[0])\n",
     "print(len(all_tropes))"
    ]
   },
@@ -100,6 +111,46 @@
    "metadata": {},
    "source": [
     "## Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5925, 18270)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#from sklearn.feature_extraction import DictVectorizer\n",
+    "#from sklearn.cluster import KMeans\n",
+    "import scipy.sparse as sp\n",
+    "\n",
+    "trope_to_num_dict = {v:i for i,v in enumerate(all_tropes)}\n",
+    "def tropeToNum(v): \n",
+    "    return trope_to_num_dict[v]\n",
+    "\n",
+    "movies_to_tropes = sp.dok_matrix((len(all_movies),len(all_tropes)), dtype=np.int8)\n",
+    "\n",
+    "for m in range(len(all_movies)):\n",
+    "    tropes = data[all_movies[m]]\n",
+    "    for i in map(tropeToNum, tropes):\n",
+    "        movies_to_tropes[m, i] = 1\n",
+    "    \n",
+    "#movies_to_tropes = movies_to_tropes.transpose().tocsr()\n",
+    "print(movies_to_tropes.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have a sparse representation, we still want to do a dimensionality reduction so that we can do clustering."
    ]
   },
   {
